syntax = "proto3";

package example;

option go_package = "go-grpc-hmac/example/pb"; // go_package is the package name for generated go code

// User is a user
message User {
  // Name of the user
  string name = 1;
  // Email of the user
  string email = 2;
}

// GetUserRequest is a request to get a user by name
message GetUserRequest {
  // Name of the user to get
  string name = 1;
}

message Empty {
  string empty = 1;
}


// UserService is a service exposed by Grpc servers that provides user management
service UserService {
  // Get a user by name
  rpc GetUser(GetUserRequest) returns (User);
  // List all users
  rpc ListUsers(Empty) returns (stream User);
}